fix file preview on mobile

--- a/frontend_app_file/src/component/PreviewComponent.styl
+++ b/frontend_app_file/src/component/PreviewComponent.styl
@@ -5,8 +5,7 @@
   flex-direction row-reverse
 
 .previewcomponent
-  position relative
-  min-height calc(100% - 130px)
+  height calc(100% - 130px)
   overflow-x hidden
   display flex
   width 100%
