--- a/frontend_app_file/src/css/index.styl
+++ b/frontend_app_file/src/css/index.styl
@@ -158,6 +158,7 @@
           min-height 250px
         &__right
           width 100%
+          height 100%
       &__statewrapper
         width 100%
       &__wrapper
